fix: fixed the issue of spacing

--- a/src/index.css
+++ b/src/index.css
@@ -118,5 +118,5 @@ a {
 }
 
 .register-footer-div {
-  margin-top: 60px;
+  margin-top: 70px;
 }
